--- a/src/main/resources/templates/fragments/edit-product.html
+++ b/src/main/resources/templates/fragments/edit-product.html
@@ -11,7 +11,7 @@
         onclick="if(event.target === this) document.getElementById('edit-modal').innerHTML = '';">
         <div class="modal-content" onclick="event.stopPropagation();">
             <h3><i class="fas fa-edit"></i> Edit Product</h3>
-            <form th:attr="hx-post=@{'/products/' + ${product.id}}" hx-target="#products-table"
+            <form th:attr="hx-put=@{'/products/' + ${product.id}}" hx-target="#products-table"
                 hx-on::after-request="if(event.detail.successful) { document.getElementById('edit-modal').innerHTML = ''; showToast('Product updated successfully!', 'success'); }">
 
                 <div class="form-row">
